tests/baselines/reference/ClassAndModuleWithSameNameAndCommonRoot.errors.txt
class.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
class.ts(1,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
module.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
module.ts(1,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
module.ts(2,22): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


==== class.ts (2 errors) ====
    module X.Y {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class Point {
            constructor(x: number, y: number) {
                this.x = x;
                this.y = y;
            }
            x: number;
            y: number;
        }
    }
    
==== module.ts (3 errors) ====
    module X.Y {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export namespace Point {
                         ~~~~~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
            export var Origin = new Point(0, 0);
        }
    }
    
==== test.ts (0 errors) ====
    //var cl: { x: number; y: number; }
    var cl = new X.Y.Point(1,1);
    var cl = X.Y.Point.Origin; // error not expected here same as bug 83996 ?
    
    
==== simple.ts (0 errors) ====
    class A {
        id: string;
    }
    
    namespace A {
        export var Instance = new A();
    }
    
    // ensure merging works as expected
    var a = A.Instance;
    var a = new A();
    var a: { id: string };
    